welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var compteur = 0
while (!sortieTrouvee()){
 do{
  compteur = 0
  avance()
  if (estSurBiscuit()){
    compteur = compteur +1
  	}
  
	}while(!crossing())
	if (compteur >2){
  	gauche()
	}
	else {
  	droite()
	
}